# end-to-end-mlflow-project

./: .env  .gitignore  MLFLOW_SOLUTION.md  README.md  Step-by-step_instructions_for_execution.ipynb  configs.yaml  load_prepare_data.py  mlflow.db  mlflow.sh  pyproject.toml  requirements.txt  train.py
artifacts/metrics/: metrics.txt
artifacts/model/: MLmodel  conda.yaml
docs/fastapi/: CHEATSHEET.md  ENDPOINTS.md  IMPLEMENTATION_SUMMARY.md  INDEX.md  README.md
docs/monitoring/: CHEATSHEET.md  IMPLEMENTATION_SUMMARY.md  INDEX.md  MONITORING_DEPLOYMENT_COMPLETE.md  MONITORING_QUICK_START.md  README.md
docs/usage/: usage_en.md  usage_pt.md
k8s/: README.md  fastapi-deployment.yaml  mlflow-deployment.yaml
k8s/monitoring/: prometheus-config.yaml  prometheus-grafana-deployment.yaml
k8s/monitoring/dashboards/: mlflow-monitoring-dashboard.json
mlruns/: mlflow.db
scripts/: monitoring.sh  run.sh
src/end_to_end_mlflow_project.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
src/mlops_project/: Dockerfile  api.py  configs.yaml  data_prep.py  deploy.py  docker-compose.mlflow.yml  docker-entrypoint.sh  evaluate.py  load_prepare_data.py  mlflow.db  mlflow_utils.py  schemas.py  train.py  utils.py
src/mlops_project/artifacts/model/: MLmodel  (+1 more)
src/mlops_project/mlruns/: mlflow.db
src/mlruns/655234662824914477/: meta.yaml
src/mlruns/786069973314437307/: meta.yaml
tests/: conftest.py  test_data_preprocessing.py  test_deploy.py  test_environment.py  test_evaluate.py  test_train.py
tests/artifacts/model/: MLmodel
tests/artifacts/results/: evaluation_results.txt
(+494 files in other folders)
