[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "end-to-end-mlflow-project"
version = "0.1.0"
description = "Example end-to-end MLflow project with training, serving and monitoring."
authors = [
    { name = "Fernando Galvão" }
]
readme = "README.md"
requires-python = ">=3.9"

# dependencies are managed via requirements.txt to keep version pins in one place
# users should `pip install -r requirements.txt` or `pip install -e .[dev]` when available

[project.urls]
"Source" = "https://github.com/FGalvao77/end-to-end-mlflow-project"

[project.optional-dependencies]
dev = ["pytest>=7.4.0"]
